--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "axios": "^1.8.3",
     "lightweight-charts": "^5.0.3",
     "lodash": "^4.17.21",
-    "next": "15.2.2",
+    "next": "^15.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
